# sudoscientific-doc-tool

./: .gitignore  CODEOWNERS  pyproject.toml
sdt/: __main__.py  main.py
tests/: test_functions.py
